--- a/mindshare-core/build.gradle
+++ b/mindshare-core/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.5'
+    id 'org.springframework.boot' version '3.3.5' apply false
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
@@ -19,8 +19,16 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+tasks {
+    bootJar {
+        enabled = false // Spring Boot JAR 비활성화
+    }
+
+    jar {
+        enabled = true
+    }
 }
 
 tasks.named('test') {
