--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ subprojects { // 모든 하위 모듈들에 이 설정을 적용합니다.
         implementation 'org.springframework.boot:spring-boot-starter-validation'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
+        // modelmapper
+        implementation 'org.modelmapper:modelmapper:3.1.0'
+
         // lombok
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
@@ -46,7 +49,14 @@ subprojects { // 모든 하위 모듈들에 이 설정을 적용합니다.
         // db
         runtimeOnly 'com.h2database:h2'
 
+        // security
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+        implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+        implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
         // test
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.security:spring-security-test'
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     }
