--- a/mindshare-ams/build.gradle
+++ b/mindshare-ams/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation project(':mindshare-core') // core 모듈 가져오기
 
     implementation 'org.springframework.boot:spring-boot-starter'
+
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 }
 
 tasks.named('test') {
