--- a/mindshare-security/src/main/resources/application.yml
+++ b/mindshare-security/src/main/resources/application.yml
@@ -1,28 +1,10 @@
 server:
-  port: 8082
+  port: 8081
 
 spring:
   application:
     name: mindshare-security
 
-  # h2 인메모리 db 사용
-  datasource:
-    url: jdbc:h2:mem:mindshare
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: testdb
-
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
-  jpa:
-    hibernate:
-      ddl-auto: create
-    show-sql: true
-
-jwt:
-  secret-key: N8sCwRiGsi24Lo8ov4SSYH5x2Sq/hDqR6Jrpnf6OGtU= # secret key
-  at-exp-sec: 900 # access token expiration (seconds) - 15 minutes
-  rt-exp-sec: 604800 # refresh token expiration (seconds) - 7 days
+  profiles:
+    include:
+      - core
