--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,23 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.5' apply false
+    id 'org.springframework.boot' version '3.3.5'
     id 'io.spring.dependency-management' version '1.1.6'
+}
+
+tasks {
+    bootJar {
+        enabled = false // Spring Boot JAR 비활성화
+    }
+
+    jar {
+        enabled = true
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 allprojects {
@@ -14,13 +30,12 @@ allprojects {
         }
     }
 
-
     repositories {
         mavenCentral()
     }
 }
 
-subprojects { // 모든 하위 모듈들에 이 설정을 적용합니다.
+subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
@@ -49,10 +64,11 @@ subprojects { // 모든 하위 모듈들에 이 설정을 적용합니다.
         // db
         runtimeOnly 'com.h2database:h2'
 
-        // security
-        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-        implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-        implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+        // query dsl
+        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+        annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+        annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+        annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 
         // test
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
