--- a/mindshare-db/src/main/resources/application.yml
+++ b/mindshare-db/src/main/resources/application.yml
@@ -5,9 +5,8 @@ spring:
   application:
     name: mindshare-db
 
-  # h2 tcp db ??
   datasource:
-    url: jdbc:h2:tcp://localhost:9092/~/mindshare-db
+    url: jdbc:h2:tcp://localhost:9092/../mindshare-db
     driver-class-name: org.h2.Driver
     username: sa
     password: mindshare
@@ -16,12 +15,3 @@ spring:
     console:
       enabled: true
       path: /h2-console
-
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.H2Dialect
-#        format_sql: true
