--- a/mindshare-core/src/main/resources/application-core.yml
+++ b/mindshare-core/src/main/resources/application-core.yml
@@ -4,7 +4,7 @@ spring:
 
   # h2 tcp db 사용
   datasource:
-    url: jdbc:h2:tcp://localhost:9092/../mindshare-db
+    url: jdbc:h2:tcp://localhost:9092/./mindshare-db
     driver-class-name: org.h2.Driver
     username: sa
     password: mindshare
