--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,16 @@ subprojects {
     }
 
     dependencies {
+        if (project.name != 'mindshare-core') {
+            implementation project(':mindshare-core') // core 모듈 가져오기
+        }
+
+        if (project.name != 'mindshare-core' && project.name != 'mindshare-cmm') {
+            implementation project(':mindshare-cmm') // cmm 모듈 가져오기
+        }
+
         // spring
+        implementation 'org.springframework.boot:spring-boot-starter'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-security'
