--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'mindshare-server'
 
 include 'mindshare-core'
+include 'mindshare-cmm'
 include 'mindshare-security'
 include 'mindshare-ams'
 include 'mindshare-cms'
