--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,9 @@ subprojects {
         annotationProcessor "jakarta.persistence:jakarta.persistence-api"
         annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 
+        // annotation
+        implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
         // test
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.springframework.security:spring-security-test'
