--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'mindshare-server'
 
 include 'mindshare-core'
 include 'mindshare-cmm'
+include 'mindshare-batch'
 include 'mindshare-security'
 include 'mindshare-ams'
 include 'mindshare-cms'
